--- a/css/styles.css
+++ b/css/styles.css
@@ -467,6 +467,34 @@ a:hover, a:focus {
 /* ==========================================================================
 Buttons
 ========================================================================== */
+
+.white-btn {
+    display: inline-block;
+    margin: 0 10px 10px 0;
+    padding: 20px 50px;
+    border-radius: 3px;
+    background-color: #fff;
+    color: #4b98a9;
+    font-size: 16px;
+}
+.white-btn:hover, .white-btn:focus {
+    background-color: #73d0da;
+    color: #fff;
+    text-decoration: none;
+}
+.trans-btn {
+    display: inline-block;
+    padding: 18px 46px;
+    border: 2px solid #fff;
+    border-radius: 3px;
+    color: #fff;
+    font-size: 16px;
+}
+.trans-btn:hover, .trans-btn:focus {
+    border-color: #73d0da;
+    color: #73d0da;
+    text-decoration: none;
+}
 .use-btn {
     display: inline-block;
     margin: 0 10px 10px 0;
@@ -823,6 +851,38 @@ Showcase
     bottom: 20px;
 }
 
+/* ==========================================================================
+Explanations
+========================================================================== */
+.explanation-white {
+    padding: 80px 0 80px 0;
+    background-color: #f6f7f9;
+}
+.explanation-white h1 {
+    margin-bottom: 20px;
+    color: #24374b;
+    font-weight: 400;
+    font-size: 22px;
+}
+.explanation-white p {
+    margin-bottom: 25px;
+    color: #778899;
+}
+
+.explanation-blue {
+    padding: 80px 0 80px 0;
+    background-color: #3F6184;
+}
+.explanation-blue h1 {
+    margin-bottom: 20px;
+    color: #fff;
+    font-weight: 400;
+    font-size: 22px;
+}
+.explanation-blue p {
+    margin-bottom: 25px;
+    color: #fff;
+}
 /* ==========================================================================
 Screenshots Intro
 ========================================================================== */
