--- a/css/styles.css
+++ b/css/styles.css
@@ -609,7 +609,7 @@ Hero
     position: relative;
     padding: 60px 0 60px 0;
     min-height: 800px;
-    background: rgb(40, 70, 102) url('../img/hero-01.jpg') no-repeat center center;
+    background: rgb(40, 70, 102) url('../img/portrait-intro.jpg') no-repeat center center;
     background-size: cover;
     color: #fff;
 }
@@ -883,6 +883,24 @@ Explanations
     margin-bottom: 25px;
     color: #fff;
 }
+
+/* ==========================================================================
+Contact info
+========================================================================== */
+.contact-info {
+	padding: 80px 0 80px 0;
+    text-align: center;
+}
+
+.contact-img {
+    position: relative
+}
+
+
+.social-links ul {
+    list-style: none;
+}
+
 /* ==========================================================================
 Screenshots Intro
 ========================================================================== */
